= 1.7.10 = * Fixed a visual artifact of loading that caused the plain code to be partially visible
git-svn-id: https://plugins.svn.wordpress.org/crayon-syntax-highlighter/trunk@485617 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/css/style.css
+++ b/css/style.css
@@ -256,6 +256,8 @@ coloring etc.
 }
 
 .crayon-syntax .crayon-plain {
+	position: absolute;
+	opacity: 0;
 	padding: 0 5px;
 	margin: 0px;
 	resize: none; /* vertical */
